[package]
name = "jay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
hyper = { version = "0.14", features = ["http1", "runtime", "server", "tcp"] }
